[package]
name = "pixels-u32"
version = "0.2.0"
edition = "2021"
description = "Adds an extension to Pixels to access it as a u32 slice."
license = "MIT"
repository = "https://github.com/cthutu/pixels-u32"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.2"
pixels = "0.8.0"

[dev-dependencies]
anyhow = "1.0.51"
winit = "0.26.0"
