[package]
name = "pixels-u32"
version = "0.3.0"
edition = "2021"
description = "Adds an extension to Pixels to access it as a u32 slice."
license = "MIT"
repository = "https://github.com/cthutu/pixels-u32"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.8.0"
pixels = "0.9.0"

[dev-dependencies]
anyhow = "1.0.56"
winit = "0.26.1"
